module(name = "project_name")

bazel_dep(name = "bazel_skylib", version = "1.7.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "google_benchmark", version = "1.8.5")
bazel_dep(name = "protobuf", version = "29.2")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")

gxl_repository = use_extension(
    "//third_party/gxl:gxl.bzl",
    "gxl_repository",
)
use_repo(gxl_repository, "gxl")

primrose_repository = use_extension(
    "//third_party/primrose:primrose.bzl",
    "primrose_repository",
)
use_repo(primrose_repository, "primrose")

rules_cc_embed_data_repository = use_extension(
    "//third_party/rules_cc_embed_data:dep.bzl",
    "rules_cc_embed_data_repository",
)
use_repo(rules_cc_embed_data_repository, "rules_cc_embed_data")

bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
git_override(
    module_name = "bazel_clang_tidy",
    # HEAD as of 2024-03-12.
    commit = "bff5c59c843221b05ef0e37cef089ecc9d24e7da",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    # HEAD as of 2024-06-13.
    commit = "616a578e84d5b0de87361b7414669593f22e1181",
    remote = "https://github.com/davidzchen/bazel-compile-commands-extractor.git",
)
